google colab file perfected

--- a/research/Text_Summarization.ipynb
+++ b/research/Text_Summarization.ipynb
@@ -184,7 +184,10 @@
         "!pip uninstall -y transformers accelerate\n",
         "\n",
         "# Reinstall the latest versions of `transformers` and `accelerate` libraries\n",
-        "!pip install transformers accelerate\n"
+        "!pip install transformers accelerate\n",
+        "\n",
+        "# Installs dotenv variable hidder \n",
+        "!pip install python-dotenv\n"
       ]
     },
     {
