google colab perfected

--- a/research/Text_Summarization.ipynb
+++ b/research/Text_Summarization.ipynb
@@ -186,7 +186,7 @@
         "# Reinstall the latest versions of `transformers` and `accelerate` libraries\n",
         "!pip install transformers accelerate\n",
         "\n",
-        "# Installs dotenv variable hidder \n",
+        "# Install the `python-dotenv` package for handling environment variables\n",
         "!pip install python-dotenv\n"
       ]
     },
