goggle colab reperfected

--- a/research/Text_Summarization.ipynb
+++ b/research/Text_Summarization.ipynb
@@ -534,6 +534,19 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Load the Samsum dataset from a local directory\n",
+        "dataset_samsum = load_from_disk('samsum_dataset')\n",
+        "\n",
+        "# Display the loaded dataset\n",
+        "dataset_samsum\n"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 5,
       "metadata": {
         "colab": {
