--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -176,7 +176,7 @@
     "        \"\"\"\n",
     "        unzip_path = self.config.unzip_dir\n",
     "        os.makedirs(unzip_path, exist_ok=True)\n",
-    "        with zipfile.Zipfile(self.config.local_data_file, 'r') as zip_ref:\n",
+    "        with zipfile.ZipFile(self.config.local_data_file, 'r') as zip_ref:\n",
     "            zip_ref.extractall(unzip_path)\n",
     "    "
    ]
@@ -197,22 +197,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-08-17 04:14:56,407: INFO: common: YAML file: config\\config.yaml loaded successfully]\n",
-      "[2024-08-17 04:14:56,409: INFO: common: YAML file: params.yaml loaded successfully]\n",
-      "[2024-08-17 04:14:56,411: INFO: common: Directory created at: artifacts]\n",
-      "[2024-08-17 04:14:56,413: INFO: common: Directory created at: artifats/data_ingestion]\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'DataIngestion' object has no attribute 'dowmnload_file'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[10], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m     data_ingestion\u001b[38;5;241m.\u001b[39mextract_zip_file()\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m----> 8\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\n",
-      "Cell \u001b[1;32mIn[10], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m     data_ingestion_config \u001b[38;5;241m=\u001b[39m config\u001b[38;5;241m.\u001b[39mget_data_ingestion_config()\n\u001b[0;32m      4\u001b[0m     data_ingestion \u001b[38;5;241m=\u001b[39m DataIngestion(config\u001b[38;5;241m=\u001b[39mdata_ingestion_config)\n\u001b[1;32m----> 5\u001b[0m     \u001b[43mdata_ingestion\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdowmnload_file\u001b[49m()\n\u001b[0;32m      6\u001b[0m     data_ingestion\u001b[38;5;241m.\u001b[39mextract_zip_file()\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'DataIngestion' object has no attribute 'dowmnload_file'"
+      "[2024-08-17 04:33:37,517: INFO: common: YAML file: config\\config.yaml loaded successfully]\n",
+      "[2024-08-17 04:33:37,521: INFO: common: YAML file: params.yaml loaded successfully]\n",
+      "[2024-08-17 04:33:37,523: INFO: common: Directory created at: artifacts]\n",
+      "[2024-08-17 04:33:37,525: INFO: common: Directory created at: artifacts/data_ingestion]\n",
+      "[2024-08-17 04:35:26,220: INFO: 1078822533: artifacts/data_ingestion/data.zip downloaded! With the following info: \n",
+      "Connection: close\n",
+      "Content-Length: 7903594\n",
+      "Cache-Control: max-age=300\n",
+      "Content-Security-Policy: default-src 'none'; style-src 'unsafe-inline'; sandbox\n",
+      "Content-Type: application/zip\n",
+      "ETag: \"dbc016a060da18070593b83afff580c9b300f0b6ea4147a7988433e04df246ca\"\n",
+      "Strict-Transport-Security: max-age=31536000\n",
+      "X-Content-Type-Options: nosniff\n",
+      "X-Frame-Options: deny\n",
+      "X-XSS-Protection: 1; mode=block\n",
+      "X-GitHub-Request-Id: 4922:3B4C82:4194AF:454116:66C01A13\n",
+      "Accept-Ranges: bytes\n",
+      "Date: Sat, 17 Aug 2024 03:33:41 GMT\n",
+      "Via: 1.1 varnish\n",
+      "X-Served-By: cache-mrs10536-MRS\n",
+      "X-Cache: MISS\n",
+      "X-Cache-Hits: 0\n",
+      "X-Timer: S1723865621.924571,VS0,VE600\n",
+      "Vary: Authorization,Accept-Encoding,Origin\n",
+      "Access-Control-Allow-Origin: *\n",
+      "Cross-Origin-Resource-Policy: cross-origin\n",
+      "X-Fastly-Request-ID: 5ac590aee1d919870c2f795e4622e8c0bfa147d1\n",
+      "Expires: Sat, 17 Aug 2024 03:38:41 GMT\n",
+      "Source-Age: 0\n",
+      "\n",
+      "]\n"
      ]
     }
    ],
